test_suite5/ALAN/test_suite/alan-2022-examples/failing/008760_mutation.alan
source l function E(boolean T, boolean o4 begin relax end) begin relax end begin relax end
